--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Olatunbosun Egberinde",
-            "email": "bosunski@gmail.com"
+            "name": "Mukul Rai",
+            "email": "rai.mukul237@gmail.com"
         }
     ],
     "minimum-stability": "dev",
